--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -161,23 +161,38 @@
       <div id="timeline">
         <div class="timeline-container left">
           <div class="timeline-content">
-            <h2>2016</h2>
+            <h2>2015</h2>
             <p>
-              Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec
-              admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea
-              quis iuvaret expetendis his, te elit voluptua dignissim per, habeo
-              iusto primis ea eam.
+              At the beginning of our journey, when we created the
+              rehabilitation center, we were well aware that it was not an easy
+              task, but we were enthusiastic about giving our compatriots the
+              opportunity to receive the best rehabilitation - high-quality,
+              individual, modern, giving them the opportunity to return to their
+              former, normal life.
             </p>
           </div>
         </div>
         <div class="timeline-container right">
           <div class="timeline-content">
-            <h2>2017</h2>
+            <h2>2020</h2>
             <p>
-              Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec
-              admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea
-              quis iuvaret expetendis his, te elit voluptua dignissim per, habeo
-              iusto primis ea eam.
+              We began to focus on rehabilitation centers in Russia and Europe,
+              where the rehabilitation bias is inclined towards real and
+              possible rehabilitation and restoration of, first of all, domestic
+              independence, which makes it possible to free loved ones from
+              constant care for such patients
+            </p>
+          </div>
+        </div>
+        <div class="timeline-container left">
+          <div class="timeline-content">
+            <h2>2025</h2>
+            <p>
+              Now this idea has become a reality thanks to a team of
+              professionals who are ready to help every patient, give a helping
+              hand and rejoice in patients' successes as their own; thanks to
+              our patients who are motivated to improve their condition and
+              trust us with the most valuable thing - their health!
             </p>
           </div>
         </div>
@@ -262,6 +277,83 @@
             <p>TRUTH IS TO KNOW (AND LIVE) ALL THESE THINGS</p>
           </div>
         </div>
+      </div>
+    </div>
+    <!-- footer -->
+    <div style="background-color: #93c2a6" class="pt-5">
+      <div class="container">
+        <footer>
+          <div class="footer-about-clinic">
+            <h5>About Clinic</h5>
+            <ul class="footer-list">
+              <li><a href="aboutUs.html">About us</a></li>
+              <li><a href="#">link</a></li>
+              <li><a href="#">link</a></li>
+              <li><a href="#">link</a></li>
+              <li><a href="#">link</a></li>
+              <li><a href="#">link</a></li>
+            </ul>
+          </div>
+          <div class="footer-rehab">
+            <h5>Services</h5>
+            <ul class="footer-list">
+              <li><a href="services.html">Services</a></li>
+              <li><a href="#">link</a></li>
+              <li><a href="#">link</a></li>
+              <li><a href="#">link</a></li>
+              <li><a href="#">link</a></li>
+              <li><a href="#">link</a></li>
+            </ul>
+          </div>
+          <div class="footer-to-patients">
+            <h5>To patients</h5>
+            <ul class="footer-list">
+              <li><a href="blog.html">News</a></li>
+              <li><a href="#">link</a></li>
+              <li><a href="#">link</a></li>
+              <li><a href="#">link</a></li>
+              <li><a href="#">link</a></li>
+              <li><a href="#">link</a></li>
+            </ul>
+          </div>
+          <div class="footer-contacts">
+            <div class="footer-patient-stories">
+              <h5>
+                <a href="home.html#testimonials" style="color: #1b5e3a"
+                  >Patient Stories</a
+                >
+              </h5>
+            </div>
+            <div class="footer-phone">
+              <h5>Contacts</h5>
+              <p>
+                <a href="#">+7 705 296 XX XX</a>
+                <br />
+                <a href="#">+7 775 603 XX XX</a>
+              </p>
+            </div>
+            <div class="footer-email">
+              <h5>Email</h5>
+              <p><a href="#">info@med.kz</a></p>
+            </div>
+            <div class="footer-social">
+              <a href="https://www.instagram.com" target="_blank"
+                ><i class="fa-brands fa-instagram"></i
+              ></a>
+              <a href="https://www.youtube.com" target="_blank"
+                ><i class="fa-brands fa-youtube"></i
+              ></a>
+              <a href="https://www.tiktok.com" target="_blank"
+                ><i class="fa-brands fa-tiktok"></i
+              ></a>
+              <a href="https://www.facebook.com" target="_blank"
+                ><i class="fa-brands fa-facebook"></i
+              ></a>
+            </div>
+          </div>
+        </footer>
+        <hr />
+        Authors: Arsen, Angelina <br />Group: MCS-2301
       </div>
     </div>
   </body>
