--- a/pages/blog.html
+++ b/pages/blog.html
@@ -79,5 +79,82 @@
         <h1>News</h1>
       </div>
     </div>
+    <!-- footer -->
+    <div style="background-color: #93c2a6" class="pt-5">
+      <div class="container">
+        <footer>
+          <div class="footer-about-clinic">
+            <h5>About Clinic</h5>
+            <ul class="footer-list">
+              <li><a href="aboutUs.html">About us</a></li>
+              <li><a href="#">link</a></li>
+              <li><a href="#">link</a></li>
+              <li><a href="#">link</a></li>
+              <li><a href="#">link</a></li>
+              <li><a href="#">link</a></li>
+            </ul>
+          </div>
+          <div class="footer-rehab">
+            <h5>Services</h5>
+            <ul class="footer-list">
+              <li><a href="services.html">Services</a></li>
+              <li><a href="#">link</a></li>
+              <li><a href="#">link</a></li>
+              <li><a href="#">link</a></li>
+              <li><a href="#">link</a></li>
+              <li><a href="#">link</a></li>
+            </ul>
+          </div>
+          <div class="footer-to-patients">
+            <h5>To patients</h5>
+            <ul class="footer-list">
+              <li><a href="blog.html">News</a></li>
+              <li><a href="#">link</a></li>
+              <li><a href="#">link</a></li>
+              <li><a href="#">link</a></li>
+              <li><a href="#">link</a></li>
+              <li><a href="#">link</a></li>
+            </ul>
+          </div>
+          <div class="footer-contacts">
+            <div class="footer-patient-stories">
+              <h5>
+                <a href="home.html#testimonials" style="color: #1b5e3a"
+                  >Patient Stories</a
+                >
+              </h5>
+            </div>
+            <div class="footer-phone">
+              <h5>Contacts</h5>
+              <p>
+                <a href="#">+7 705 296 XX XX</a>
+                <br />
+                <a href="#">+7 775 603 XX XX</a>
+              </p>
+            </div>
+            <div class="footer-email">
+              <h5>Email</h5>
+              <p><a href="#">info@med.kz</a></p>
+            </div>
+            <div class="footer-social">
+              <a href="https://www.instagram.com" target="_blank"
+                ><i class="fa-brands fa-instagram"></i
+              ></a>
+              <a href="https://www.youtube.com" target="_blank"
+                ><i class="fa-brands fa-youtube"></i
+              ></a>
+              <a href="https://www.tiktok.com" target="_blank"
+                ><i class="fa-brands fa-tiktok"></i
+              ></a>
+              <a href="https://www.facebook.com" target="_blank"
+                ><i class="fa-brands fa-facebook"></i
+              ></a>
+            </div>
+          </div>
+        </footer>
+        <hr />
+        Authors: Arsen, Angelina <br />Group: MCS-2301
+      </div>
+    </div>
   </body>
 </html>
