--- a/pages/contactUs.html
+++ b/pages/contactUs.html
@@ -73,48 +73,80 @@
         </ul>
       </div>
     </nav>
+    <!-- faq -->
     <div class="container" style="margin-top: 7rem">
       <h1 class="text-center fw-bold">FAQ</h1>
 
       <div class="faq">
         <!-- question 1 -->
-        <button class="accordion fw-bold">
-          <i class="fa-solid fa-chevron-down"></i> question
+        <button class="collapsible fw-bold">
+          <i class="fa-solid fa-chevron-down"></i> Can we hope for 100% recovery
+          of the child after rehabilitation in your center?
         </button>
         <div class="panel">
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla,
-            placeat facere in sapiente voluptatem, ut dignissimos accusantium
-            aperiam animi adipisci corrupti? Unde, corporis excepturi alias
-            veritatis minus mollitia reprehenderit in.
+            We always tell the patient and family honestly what we can achieve
+            with rehabilitation at each stage of recovery and what we cannot
+            achieve. We set realistic goals. Sometimes there is a chance of full
+            recovery and sometimes, unfortunately, there is no chance. But we
+            always set ourselves a goal - to normalize a person's life in any
+            situation, to restore the joy of life, and to help them adapt to a
+            new life, and to improve the quality of life, minimizing the risks
+            of possible complications as much as possible.
           </p>
         </div>
         <!-- question 2 -->
-        <button class="accordion fw-bold">
-          <i class="fa-solid fa-chevron-down"></i> question
+        <button class="collapsible fw-bold">
+          <i class="fa-solid fa-chevron-down"></i> What is rehabilitation? And
+          who needs it?
         </button>
         <div class="panel">
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla,
-            placeat facere in sapiente voluptatem, ut dignissimos accusantium
-            aperiam animi adipisci corrupti? Unde, corporis excepturi alias
-            veritatis minus mollitia reprehenderit in.
+            Until recently, the concept of rehabilitation did not exist in
+            Kazakhstan and many people after serious illnesses and injuries
+            never returned to normal life. Many people still do not understand
+            what it is and who may need it. Let's dot all the i's.
+            Rehabilitation is a complex restoration of the functions of the
+            organism disturbed as a result of illness or injury. The main goal
+            is to improve the quality of life of a person. In rehabilitation, it
+            is crucial to set goals that are correct and achievable for the
+            patient. As we often explain - why does a person need a perfectly
+            developed hand? One needs it to write, another needs it to paint
+            walls, etc. Each patient has different priorities. The goal of
+            rehabilitation is to enable each patient to do what they need to do
+            or to adapt them to a “new” life if they have a serious impairment.
+            Rehabilitation is a process that involves an interdisciplinary team
+            of specialists under the direction of a rehabilitation physician.
+            Physical therapists work on motor function, speech and cognitive
+            function with speech therapists, self-care functions with
+            occupational therapists, and so on. And they all work together with
+            the family, which is also part of this big team.
           </p>
         </div>
         <!-- question 3 -->
-        <button class="accordion fw-bold">
-          <i class="fa-solid fa-chevron-down"></i> question
+        <button class="collapsible fw-bold">
+          <i class="fa-solid fa-chevron-down"></i> What is the purpose of your
+          approach?
         </button>
         <div class="panel">
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla,
-            placeat facere in sapiente voluptatem, ut dignissimos accusantium
-            aperiam animi adipisci corrupti? Unde, corporis excepturi alias
-            veritatis minus mollitia reprehenderit in.
+            The goal of our approach is accomplished in 3 steps: <br />
+
+            1. Getting to know the patient as a person, what is valuable to him,
+            what is he like? <br />
+
+            2. To form the patient's motivation for recovery and help him/her
+            regain self-confidence and joy in life! <br />
+
+            3. To return the patient to an active and fulfilling life based on
+            their unique situation. <br />
+
+            The key resource of our center is our close-knit team of
+            professionals! <br />
           </p>
         </div>
         <!-- question 4 -->
-        <button class="accordion fw-bold">
+        <button class="collapsible fw-bold">
           <i class="fa-solid fa-chevron-down"></i> question
         </button>
         <div class="panel">
@@ -151,8 +183,85 @@
         </div>
       </div>
     </div>
+    <!-- footer -->
+    <div style="background-color: #93c2a6" class="pt-5">
+      <div class="container">
+        <footer>
+          <div class="footer-about-clinic">
+            <h5>About Clinic</h5>
+            <ul class="footer-list">
+              <li><a href="aboutUs.html">About us</a></li>
+              <li><a href="#">link</a></li>
+              <li><a href="#">link</a></li>
+              <li><a href="#">link</a></li>
+              <li><a href="#">link</a></li>
+              <li><a href="#">link</a></li>
+            </ul>
+          </div>
+          <div class="footer-rehab">
+            <h5>Services</h5>
+            <ul class="footer-list">
+              <li><a href="services.html">Services</a></li>
+              <li><a href="#">link</a></li>
+              <li><a href="#">link</a></li>
+              <li><a href="#">link</a></li>
+              <li><a href="#">link</a></li>
+              <li><a href="#">link</a></li>
+            </ul>
+          </div>
+          <div class="footer-to-patients">
+            <h5>To patients</h5>
+            <ul class="footer-list">
+              <li><a href="blog.html">News</a></li>
+              <li><a href="#">link</a></li>
+              <li><a href="#">link</a></li>
+              <li><a href="#">link</a></li>
+              <li><a href="#">link</a></li>
+              <li><a href="#">link</a></li>
+            </ul>
+          </div>
+          <div class="footer-contacts">
+            <div class="footer-patient-stories">
+              <h5>
+                <a href="home.html#testimonials" style="color: #1b5e3a"
+                  >Patient Stories</a
+                >
+              </h5>
+            </div>
+            <div class="footer-phone">
+              <h5>Contacts</h5>
+              <p>
+                <a href="#">+7 705 296 XX XX</a>
+                <br />
+                <a href="#">+7 775 603 XX XX</a>
+              </p>
+            </div>
+            <div class="footer-email">
+              <h5>Email</h5>
+              <p><a href="#">info@med.kz</a></p>
+            </div>
+            <div class="footer-social">
+              <a href="https://www.instagram.com" target="_blank"
+                ><i class="fa-brands fa-instagram"></i
+              ></a>
+              <a href="https://www.youtube.com" target="_blank"
+                ><i class="fa-brands fa-youtube"></i
+              ></a>
+              <a href="https://www.tiktok.com" target="_blank"
+                ><i class="fa-brands fa-tiktok"></i
+              ></a>
+              <a href="https://www.facebook.com" target="_blank"
+                ><i class="fa-brands fa-facebook"></i
+              ></a>
+            </div>
+          </div>
+        </footer>
+        <hr />
+        Authors: Arsen, Angelina <br />Group: MCS-2301
+      </div>
+    </div>
     <script>
-      var acc = document.getElementsByClassName("accordion");
+      var acc = document.getElementsByClassName("collapsible");
       var i;
 
       for (i = 0; i < acc.length; i++) {
