--- a/pages/blog.html
+++ b/pages/blog.html
@@ -77,6 +77,121 @@
     <div id="news" style="margin-top: 5rem">
       <div class="container text-center fw-bold">
         <h1>News</h1>
+        <div
+          class="row row-cols-1 row-cols-md-3 row-cols-lg-4 row-cols-xs-6 g-4 mt-5"
+        >
+          <div class="col">
+            <div class="card h-100 border-success">
+              <img
+                src="../images/news/parking.jpeg"
+                class="card-img-top"
+                alt="../images"
+              />
+              <div class="card-body">
+                <h5 class="card-title">
+                  New! Parking is free for client families starting November 1
+                </h5>
+                <p class="card-text">
+                  At MedKz, our goal is to eliminate as many barriers to care as
+                  possible. From feedback we've received from families, parking
+                  fees and tickets are a barrier to accessing programs and
+                  services across all sites.
+                </p>
+                <button class="btn btn-success btn-lg" type="button">
+                  Read More
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100 border-success">
+              <img
+                src="../images/news/funding.jpg"
+                class="card-img-top"
+                alt="../images"
+              />
+              <div class="card-body">
+                <h5 class="card-title">
+                  MedKz welcomes boost to funding for programs and services
+                </h5>
+                <p class="card-text">
+                  MedKz is pleased to see the Government of Kazakhstan's
+                  commitment to funding for programs and services for children
+                  with special needs. The government has announced a $1.5
+                  million investment in programs and services for children with
+                  special needs.
+                </p>
+                <button class="btn btn-success btn-lg" type="button">
+                  Read More
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100 border-success">
+              <img
+                src="../images/news/respiteServices.jpeg"
+                class="card-img-top"
+                alt="../images"
+              />
+              <div class="card-body">
+                <h5 class="card-title">
+                  New and Enhanced Respite Services - Registration Now Open
+                </h5>
+                <p class="card-text">
+                  MedKz is pleased to announce that registration is now open for
+                  new and enhanced respite services. These services are designed
+                  to provide families with a break from the demands of caring
+                  for a child with special needs.
+                </p>
+                <button class="btn btn-success btn-lg" type="button">
+                  Read More
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100 border-success">
+              <img
+                src="../images/news/masks.jpeg"
+                class="card-img-top"
+                alt="../images"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Masks Still Required</h5>
+                <p class="card-text">
+                  MedKz continues to require masks for all clients, staff, and
+                  visitors. We are committed to keeping our clients and staff
+                  safe and healthy. Thank you for your cooperation.
+                </p>
+                <button class="btn btn-success btn-lg" type="button">
+                  Read More
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100 border-success">
+              <img
+                src="../images/news/newAutismServices.jpeg"
+                class="card-img-top"
+                alt="../images"
+              />
+              <div class="card-body">
+                <h5 class="card-title">What's New in Autism Services?</h5>
+                <p class="card-text">
+                  MedKz is pleased to announce that we are expanding our autism
+                  services. We are now offering a new program for children with
+                  autism. This program is designed to help children with autism
+                  develop the skills they need to succeed in school and in life.
+                </p>
+                <button class="btn btn-success btn-lg" type="button">
+                  Read More
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <!-- footer -->
