--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -38,7 +38,12 @@
     <nav class="navbar navbar-expand-lg fixed-top">
       <div class="logo">
         <a href="home.html"
-          ><img src="../images/logo.png" width="100" alt="logo" />
+          ><img
+            loading="lazy"
+            src="../images/logo.png"
+            width="100"
+            alt="logo"
+          />
         </a>
       </div>
       <button
@@ -107,6 +112,7 @@
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <img
+                    loading="lazy"
                     src="../images/About us/gallery1.jpg"
                     class="d-block w-100"
                     alt="Gallery"
@@ -114,6 +120,7 @@
                 </div>
                 <div class="carousel-item">
                   <img
+                    loading="lazy"
                     src="../images/About us/gallery2.jpg"
                     class="d-block w-100"
                     alt="Gallery"
@@ -121,6 +128,7 @@
                 </div>
                 <div class="carousel-item">
                   <img
+                    loading="lazy"
                     src="../images/About us/gallery3.jpg"
                     class="d-block w-100"
                     alt="Gallery"
@@ -204,25 +212,36 @@
         <h1>Partners and sponsors</h1>
         <div class="chain-of-cards">
           <div class="chain-of-cards-item">
-            <img src="../images/partnersAndSponsors/altyn.png" alt="altyn" />
-          </div>
-          <div class="chain-of-cards-item">
-            <img src="../images/partnersAndSponsors/ayla.jpg" alt="ayla" />
+            <img
+              loading="lazy"
+              src="../images/partnersAndSponsors/altyn.png"
+              alt="altyn"
+            />
           </div>
           <div class="chain-of-cards-item">
             <img
+              loading="lazy"
+              src="../images/partnersAndSponsors/ayla.jpg"
+              alt="ayla"
+            />
+          </div>
+          <div class="chain-of-cards-item">
+            <img
+              loading="lazy"
               src="../images/partnersAndSponsors/halyk_bank.jpg"
               alt="halyk_bank"
             />
           </div>
           <div class="chain-of-cards-item">
             <img
+              loading="lazy"
               src="../images/partnersAndSponsors/nur_otan.jpg"
               alt="nur_otan"
             />
           </div>
           <div class="chain-of-cards-item">
             <img
+              loading="lazy"
               src="../images/partnersAndSponsors/rosinka.png"
               alt="rosinka"
             />
