--- a/pages/blog.html
+++ b/pages/blog.html
@@ -38,7 +38,12 @@
     <nav class="navbar navbar-expand-lg fixed-top">
       <div class="logo">
         <a href="home.html"
-          ><img src="../images/logo.png" width="100" alt="logo" />
+          ><img
+            loading="lazy"
+            src="../images/logo.png"
+            width="100"
+            alt="logo"
+          />
         </a>
       </div>
       <button
@@ -83,6 +88,7 @@
           <div class="col">
             <div class="card h-100 border-success">
               <img
+                loading="lazy"
                 src="../images/news/parking.jpeg"
                 class="card-img-top"
                 alt="../images"
@@ -106,6 +112,7 @@
           <div class="col">
             <div class="card h-100 border-success">
               <img
+                loading="lazy"
                 src="../images/news/funding.jpg"
                 class="card-img-top"
                 alt="../images"
@@ -130,6 +137,7 @@
           <div class="col">
             <div class="card h-100 border-success">
               <img
+                loading="lazy"
                 src="../images/news/respiteServices.jpeg"
                 class="card-img-top"
                 alt="../images"
@@ -153,6 +161,7 @@
           <div class="col">
             <div class="card h-100 border-success">
               <img
+                loading="lazy"
                 src="../images/news/masks.jpeg"
                 class="card-img-top"
                 alt="../images"
@@ -173,6 +182,7 @@
           <div class="col">
             <div class="card h-100 border-success">
               <img
+                loading="lazy"
                 src="../images/news/newAutismServices.jpeg"
                 class="card-img-top"
                 alt="../images"
