--- a/pages/home.html
+++ b/pages/home.html
@@ -38,7 +38,12 @@
     <nav class="navbar navbar-expand-lg fixed-top">
       <div class="logo">
         <a href="home.html"
-          ><img src="../images/logo.png" width="100" alt="logo" />
+          ><img
+            loading="lazy"
+            src="../images/logo.png"
+            width="100"
+            alt="logo"
+          />
         </a>
       </div>
       <button
@@ -149,6 +154,7 @@
                     <div class="row align-items-center">
                       <div class="col-md-4 text-center">
                         <img
+                          loading="lazy"
                           src="../images/patience/photo-1.jpg"
                           class="avatar mb-3"
                           alt="patient Avatar"
@@ -168,6 +174,7 @@
                     <div class="row align-items-center">
                       <div class="col-md-4 text-center">
                         <img
+                          loading="lazy"
                           src="../images/patience/photo2.jpg"
                           class="avatar mb-3"
                           alt="patient Avatar"
@@ -187,6 +194,7 @@
                     <div class="row align-items-center">
                       <div class="col-md-4 text-center">
                         <img
+                          loading="lazy"
                           src="../images/patience/photo3.jpg"
                           class="avatar mb-3"
                           alt="patient Avatar"
@@ -206,6 +214,7 @@
                     <div class="row align-items-center">
                       <div class="col-md-4 text-center">
                         <img
+                          loading="lazy"
                           src="../images/patience/photo4.jpg"
                           class="avatar mb-3"
                           alt="patient Avatar"
@@ -225,6 +234,7 @@
                     <div class="row align-items-center">
                       <div class="col-md-4 text-center">
                         <img
+                          loading="lazy"
                           src="../images/patience/photo5.jpg"
                           class="avatar mb-3"
                           alt="patient Avatar"
@@ -297,6 +307,124 @@
               </div>
             </div>
           </div>
+        </div>
+      </div>
+    </div>
+    <!-- clinic gallery -->
+    <div id="technologies">
+      <div class="container text-center mt-5 py-5">
+        <h1 class="display-6 fw-bold py-5">Clinics gallery</h1>
+        <div class="row">
+          <a
+            href="../images/clinics/photo-01.jpeg"
+            class="col-md-12 col-lg-4 img-fluid py-2"
+            data-toggle="lightbox"
+            data-gallery="photo_gallery"
+          >
+            <img
+              src="../images/clinics/photo-01.jpeg"
+              alt="img"
+              class="img-fluid"
+          /></a>
+          <a
+            href="../images/clinics/photo-02.jpeg"
+            class="col-md-12 col-lg-4 img-fluid py-2"
+            data-toggle="lightbox"
+            data-gallery="photo_gallery"
+          >
+            <img
+              src="../images/clinics/photo-02.jpeg"
+              alt="img"
+              class="img-fluid"
+          /></a>
+          <a
+            href="../images/clinics/photo-03.jpeg"
+            class="col-md-12 col-lg-4 img-fluid py-2"
+            data-toggle="lightbox"
+            data-gallery="photo_gallery"
+          >
+            <img
+              src="../images/clinics/photo-03.jpeg"
+              alt="img"
+              class="img-fluid"
+          /></a>
+          <a
+            href="../images/clinics/photo-04.jpeg"
+            class="col-md-12 col-lg-4 img-fluid py-2"
+            data-toggle="lightbox"
+            data-gallery="photo_gallery"
+          >
+            <img
+              src="../images/clinics/photo-04.jpeg"
+              alt="img"
+              class="img-fluid"
+          /></a>
+          <a
+            href="../images/clinics/photo-05.jpeg"
+            class="col-md-12 col-lg-4 img-fluid py-2"
+            data-toggle="lightbox"
+            data-gallery="photo_gallery"
+          >
+            <img
+              src="../images/clinics/photo-05.jpeg"
+              alt="img"
+              class="img-fluid"
+          /></a>
+          <a
+            href="../images/clinics/photo-06.jpeg"
+            class="col-md-12 col-lg-4 img-fluid py-2"
+            data-toggle="lightbox"
+            data-gallery="photo_gallery"
+          >
+            <img
+              src="../images/clinics/photo-06.jpeg"
+              alt="img"
+              class="img-fluid"
+          /></a>
+          <a
+            href="../images/clinics/photo-07.jpeg"
+            class="col-md-12 col-lg-4 img-fluid py-2"
+            data-toggle="lightbox"
+            data-gallery="photo_gallery"
+          >
+            <img
+              src="../images/clinics/photo-07.jpeg"
+              alt="img"
+              class="img-fluid"
+          /></a>
+          <a
+            href="../images/clinics/photo-08.jpeg"
+            class="col-md-12 col-lg-4 img-fluid py-2"
+            data-toggle="lightbox"
+            data-gallery="photo_gallery"
+          >
+            <img
+              src="../images/clinics/photo-08.jpeg"
+              alt="img"
+              class="img-fluid"
+          /></a>
+          <a
+            href="../images/clinics/photo-09.jpeg"
+            class="col-md-12 col-lg-4 img-fluid py-2"
+            data-toggle="lightbox"
+            data-gallery="photo_gallery"
+          >
+            <img
+              src="../images/clinics/photo-09.jpeg"
+              alt="img"
+              class="img-fluid"
+          /></a>
+          <a
+            href="../images/clinics/photo-10.jpeg"
+            class="col-md-12 col-lg-4 img-fluid py-2"
+            data-toggle="lightbox"
+            data-gallery="photo_gallery"
+          >
+            <img
+              src="../images/clinics/photo-10.jpeg"
+              alt="img"
+              class="img-fluid"
+          /></a>
         </div>
       </div>
     </div>
@@ -479,5 +607,6 @@
         Authors: Arsen, Angelina <br />Group: MCS-2301
       </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bs5-lightbox@1.8.3/dist/index.bundle.min.js"></script>
   </body>
 </html>
