--- a/pages/services.html
+++ b/pages/services.html
@@ -39,7 +39,12 @@
     <nav class="navbar navbar-expand-lg fixed-top">
       <div class="logo">
         <a href="home.html"
-          ><img src="../images/logo.png" width="100" alt="logo" />
+          ><img
+            loading="lazy"
+            src="../images/logo.png"
+            width="100"
+            alt="logo"
+          />
         </a>
       </div>
       <button
@@ -409,6 +414,7 @@
           <div class="col">
             <div class="card h-100 border-success">
               <img
+                loading="lazy"
                 src="../images/technoligiesAndInovations/strolll.png"
                 class="card-img-top"
                 alt="../images"
@@ -426,6 +432,7 @@
           <div class="col">
             <div class="card h-100 border-success">
               <img
+                loading="lazy"
                 src="../images/technoligiesAndInovations/syrebo.jpg"
                 class="card-img-top"
                 alt="../images"
@@ -441,6 +448,7 @@
           <div class="col">
             <div class="card h-100 border-success">
               <img
+                loading="lazy"
                 src="../images/technoligiesAndInovations/dst.jpeg"
                 class="card-img-top"
                 alt="../images"
@@ -458,6 +466,7 @@
           <div class="col">
             <div class="card h-100 border-success">
               <img
+                loading="lazy"
                 src="../images/technoligiesAndInovations/brz.jpg"
                 class="card-img-top"
                 alt="../images"
@@ -475,6 +484,7 @@
           <div class="col">
             <div class="card h-100 border-success">
               <img
+                loading="lazy"
                 src="../images/technoligiesAndInovations/strolll.png"
                 class="card-img-top"
                 alt="../images"
@@ -492,6 +502,7 @@
           <div class="col">
             <div class="card h-100 border-success">
               <img
+                loading="lazy"
                 src="../images/technoligiesAndInovations/syrebo.jpg"
                 class="card-img-top"
                 alt="../images"
@@ -507,6 +518,7 @@
           <div class="col">
             <div class="card h-100 border-success">
               <img
+                loading="lazy"
                 src="../images/technoligiesAndInovations/dst.jpeg"
                 class="card-img-top"
                 alt="../images"
@@ -524,6 +536,7 @@
           <div class="col">
             <div class="card h-100 border-success">
               <img
+                loading="lazy"
                 src="../images/technoligiesAndInovations/brz.jpg"
                 class="card-img-top"
                 alt="../images"
@@ -541,6 +554,7 @@
           <div class="col">
             <div class="card h-100 border-success">
               <img
+                loading="lazy"
                 src="../images/technoligiesAndInovations/strolll.png"
                 class="card-img-top"
                 alt="../images"
@@ -558,6 +572,7 @@
           <div class="col">
             <div class="card h-100 border-success">
               <img
+                loading="lazy"
                 src="../images/technoligiesAndInovations/syrebo.jpg"
                 class="card-img-top"
                 alt="../images"
@@ -573,6 +588,7 @@
           <div class="col">
             <div class="card h-100 border-success">
               <img
+                loading="lazy"
                 src="../images/technoligiesAndInovations/dst.jpeg"
                 class="card-img-top"
                 alt="../images"
@@ -590,6 +606,7 @@
           <div class="col">
             <div class="card h-100 border-success">
               <img
+                loading="lazy"
                 src="../images/technoligiesAndInovations/brz.jpg"
                 class="card-img-top"
                 alt="../images"
@@ -616,6 +633,7 @@
           <div class="col">
             <div class="card h-100 border-success">
               <img
+                loading="lazy"
                 src="../images/technoligiesAndInovations/lunaEmg.jpg"
                 class="card-img-top"
                 alt="../images"
@@ -634,6 +652,7 @@
           <div class="col">
             <div class="card h-100 border-success">
               <img
+                loading="lazy"
                 src="../images/technoligiesAndInovations/biomotum.jpg"
                 class="card-img-top"
                 alt="images"
@@ -653,6 +672,7 @@
           <div class="col">
             <div class="card h-100 border-success">
               <img
+                loading="lazy"
                 src="../images/technoligiesAndInovations/lunaEmg.jpg"
                 class="card-img-top"
                 alt="../images"
@@ -671,6 +691,7 @@
           <div class="col">
             <div class="card h-100 border-success">
               <img
+                loading="lazy"
                 src="../images/technoligiesAndInovations/biomotum.jpg"
                 class="card-img-top"
                 alt="images"
@@ -690,6 +711,7 @@
           <div class="col">
             <div class="card h-100 border-success">
               <img
+                loading="lazy"
                 src="../images/technoligiesAndInovations/lunaEmg.jpg"
                 class="card-img-top"
                 alt="../images"
@@ -708,6 +730,7 @@
           <div class="col">
             <div class="card h-100 border-success">
               <img
+                loading="lazy"
                 src="../images/technoligiesAndInovations/biomotum.jpg"
                 class="card-img-top"
                 alt="images"
@@ -727,6 +750,7 @@
           <div class="col">
             <div class="card h-100 border-success">
               <img
+                loading="lazy"
                 src="../images/technoligiesAndInovations/lunaEmg.jpg"
                 class="card-img-top"
                 alt="../images"
@@ -745,6 +769,7 @@
           <div class="col">
             <div class="card h-100 border-success">
               <img
+                loading="lazy"
                 src="../images/technoligiesAndInovations/biomotum.jpg"
                 class="card-img-top"
                 alt="images"
@@ -764,6 +789,7 @@
           <div class="col">
             <div class="card h-100 border-success">
               <img
+                loading="lazy"
                 src="../images/technoligiesAndInovations/lunaEmg.jpg"
                 class="card-img-top"
                 alt="../images"
@@ -782,6 +808,7 @@
           <div class="col">
             <div class="card h-100 border-success">
               <img
+                loading="lazy"
                 src="../images/technoligiesAndInovations/biomotum.jpg"
                 class="card-img-top"
                 alt="images"
@@ -801,6 +828,7 @@
           <div class="col">
             <div class="card h-100 border-success">
               <img
+                loading="lazy"
                 src="../images/technoligiesAndInovations/lunaEmg.jpg"
                 class="card-img-top"
                 alt="../images"
@@ -819,6 +847,7 @@
           <div class="col">
             <div class="card h-100 border-success">
               <img
+                loading="lazy"
                 src="../images/technoligiesAndInovations/biomotum.jpg"
                 class="card-img-top"
                 alt="images"
