--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -164,7 +164,7 @@
         </div>
       </div>
     </div>
-    <div class="container text-center fw-bold">
+    <div class="text-center fw-bold", style="background-color: #acf2b1;">
       <h1>History</h1>
       <div id="timeline">
         <div class="timeline-container left">
@@ -299,11 +299,11 @@
       </div>
     </div>
     <!-- footer -->
-    <div style="background-color: #93c2a6" class="pt-5">
+    <div style="background-color: #008000" class="pt-5">
       <div class="container">
         <footer>
           <div class="footer-about-clinic">
-            <h5>About Clinic</h5>
+            <h5 style="color:#fff ;">About Clinic</h5>
             <ul class="footer-list">
               <li><a href="aboutUs.html">About us</a></li>
               <li><a href="#">link</a></li>
@@ -314,7 +314,7 @@
             </ul>
           </div>
           <div class="footer-rehab">
-            <h5>Services</h5>
+            <h5 style="color:#fff ;">Services</h5>
             <ul class="footer-list">
               <li><a href="services.html">Services</a></li>
               <li><a href="#">link</a></li>
@@ -325,7 +325,7 @@
             </ul>
           </div>
           <div class="footer-to-patients">
-            <h5>To patients</h5>
+            <h5 style="color:#fff ;">To patients</h5>
             <ul class="footer-list">
               <li><a href="blog.html">News</a></li>
               <li><a href="#">link</a></li>
@@ -338,13 +338,13 @@
           <div class="footer-contacts">
             <div class="footer-patient-stories">
               <h5>
-                <a href="home.html#testimonials" style="color: #1b5e3a"
+                <a href="home.html#testimonials" style="color: #fff"
                   >Patient Stories</a
                 >
               </h5>
             </div>
             <div class="footer-phone">
-              <h5>Contacts</h5>
+              <h5 style="color:#fff ;">Contacts</h5>
               <p>
                 <a href="#">+7 705 296 XX XX</a>
                 <br />
@@ -352,7 +352,7 @@
               </p>
             </div>
             <div class="footer-email">
-              <h5>Email</h5>
+              <h5 style="color:#fff ;">Email</h5>
               <p><a href="#">info@med.kz</a></p>
             </div>
             <div class="footer-social">
